Fixed missalignment of music icon for mobile views

--- a/src/index.css
+++ b/src/index.css
@@ -40,7 +40,7 @@ button:focus {
 
 .input-group-text {
   background: rgb(0 0 0 / 25%) !important;
-  font-size: 1.45rem !important;
+  font-size: 1.25rem !important;
   font-weight: 1000 !important;
   color: white !important;
 }
